Last fixes to HEPU problems.

--- a/docs/CarbonInvestments.tex
+++ b/docs/CarbonInvestments.tex
@@ -10,7 +10,7 @@
 \author{K. Abramowicz, E. Wenk, D. Falster}
 \date{\today}
 
-\graphicspath{../output/docs}
+\graphicspath{{images/}{../output/docs/}}
 
 \setlength{\textwidth}{151mm}\topmargin 7mm \textheight 210mm
 \headheight 0mm \headsep 10mm \footskip 15mm \textwidth 151mm
